Fixed card shifting for screens with width >= 1000px

--- a/src/styles/parts-styles/_our-team-members-item.scss
+++ b/src/styles/parts-styles/_our-team-members-item.scss
@@ -109,6 +109,7 @@
 
   .our-team-members-items-item:nth-child(odd) .our-team-members-items-item-wrap {
     right: 0px;
+    left: auto;
   }
 
   .our-team-members-items-item-info {
